fixed alignment issue with footer covering other content

--- a/frontend/src/component/Footer.css
+++ b/frontend/src/component/Footer.css
@@ -1,7 +1,8 @@
 footer {
-    display: flex;
+    display: block;
     width: 100%;
-    justify-content: center;
+    /* justify-content: center; */
+    text-align: center;
     position: fixed;
     bottom: 0;
     background-color: #f0ffff;
